--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,13 @@
 {
     "cSpell.words": [
-        "RMRF",
-        "WMXPY",
         "codecov",
         "mocharc",
+        "RMRF",
+        "sudob",
         "sudoo",
         "triforce",
         "tshook",
+        "WMXPY",
         "xenocount"
     ],
     "eslint.options": {
